favorite조회 쿼리 변경